--- a/BikeServer/src/main/resources/application.properties
+++ b/BikeServer/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # POSTGRES
-spring.datasource.url=jdbc:postgresql://localhost:5432/car_shop
+spring.datasource.url=jdbc:postgresql://localhost:5432/bike_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8666
 
